applied spotless formatting